- patch #2099972 [structure] Display None when there is no default value,
  thanks to Xuefer - xuefer
- patch #2122883 [PDF schema] Option to display just the keys,
  thanks to Samuel Sol Villar dos Santos - yohanleafheart
+ rfe #1276463 [search] Search empty/not empty values 
+ rfe #823652 [structure] ENUM values: field size too small 

3.0.2.0 (not yet released)

3.0.1.0 (2008-10-22)
- bug #2134126 [GUI] SQL error after sorting a subset 
+ [lang] Catalan update, thanks to Xavier Navarro
+ [lang] Russian update, thanks to Victor Volkov
- patch #2143882 [import] Temporary uploaded file not deleted,
  thanks to David Misc - dmisc
- bug #2136986 [auth] Cannot create database after session timeout 
- bug #1914066 [core] ForceSSL generates incorrectly escaped redirections,
  this time with the correct fix
+ [lang] Hungarian update, thanks to Jozsef Tamas Herczeg - dodika 
- bug #2153970 [core] Properly truncate SQL to avoid half of html tags
+ [lang] Romanian update, thanks to Sergiu Bivol - sbivol
- bug #2161443 [structure] Incorrect index choice shown when modifying an
index
- bug #2127094 [interface] Misleading message after cancelling an action
+ [lang] Croatian update, thanks to Renato Pavicic
+ [lang] Finnish update, thanks to Jouni Kahkonen
+ [lang] Polish update, thanks to Jakub Wilk 
+ [lang] Japanese update, thanks to Ishigaki Kenichi
- patch #2176438 [privileges] Wrong message when changing password,
  thanks to incognito - zytisin
- bug #2163437 [core] Cannot disable PMA tables
- bug #2184240 [lang] Problems with Italian language file, thanks to Luca
Rebellato
- bug #2187193 [interface] ShowChgPassword setting not respected

3.0.0.0 (2008-09-27)
+ [export] properly handle line breaks for YAML, thanks to Dan Barry -
danbarry
+ [navi] new parameter $cfg['LeftDefaultTabTable']
+ [table] support MySQL 5.1 PARTITION: CREATE TABLE / Table structure,
  partition maintenance
+ [privileges] support for EVENT and TRIGGER