@@ -86,6 +86,13 @@ $strBinLogName = 'Nome del Log';
 $strBinLogOriginalPosition = 'Posizione originale';
 $strBinLogPosition = 'Posizione';
 $strBinLogServerId = 'ID del server';
+$strBLOBRepositoryDamaged = 'Danneggiato';
+$strBLOBRepositoryDisabled = 'Disabilitato';
+$strBLOBRepositoryDisable = 'Disabilita';
+$strBLOBRepositoryEnable = 'Abilita';
+$strBLOBRepositoryEnabled = 'Abilitato';
+$strBLOBRepositoryRepair = 'Ripara';
+$strBLOBRepositoryStatus = 'Stato';
 $strBookmarkAllUsers = 'Permetti ad ogni utente di accedere a questo bookmark';
 $strBookmarkCreated = 'Segnalibro %s creato';
 $strBookmarkDeleted = 'Il bookmark è stato cancellato.';
@@ -242,6 +249,7 @@ $strDisplayPDF = 'Mostra lo schema del PDF';
 $strDoAQuery = 'Esegui "query da esempio" (carattere jolly: "%")';
 $strDocSQL = 'DocSQL';
 $strDocu = 'Documentazione';
+$strDownloadFile = 'Scarica file';
 $strDoYouReally = 'Confermi: ';
 $strDropDatabaseStrongWarning = 'Si sta per DISTRUGGERE COMPLETAMENTE un intero DataBase!';
 $strDrop = 'Elimina';
@@ -445,6 +453,7 @@ $strLogin = 'Connetti';
 $strLoginInformation = 'Informazioni di Login';
 $strLogout = 'Disconnetti';
 $strLogPassword = 'Password:';
+$strLogServerHelp = 'Puoi inserire Indirizzo IP/hostname a porta separati dallo spazio.';
 $strLogServer = 'Server';
 $strLogUsername = 'Nome utente:';
 $strLongOperation = 'Questa operazione potrebbe impiegare molto tempo. Procedere comunque?';
@@ -597,6 +606,7 @@ $strPhoneBook = 'rubrica';
 $strPhp = 'Crea il codice PHP';
 $strPHPExtension = 'Estensioni PHP';
 $strPHPVersion = 'Versione PHP';
+$strPlayAudio = 'Avvia audio';
 $strPleaseSelectPrimaryOrUniqueKey = 'Seleziona la chiave primaria o una chiave univoca';
 $strPmaDocumentation = 'Documentazione di phpMyAdmin';
 $strPmaUriError = 'La direttiva <tt>$cfg[\'PmaAbsoluteUri\']</tt> DEVE essere impostata nel file di configurazione!';
@@ -761,7 +771,7 @@ $strServerStatusDelayedInserts = 'Inserimento ritardato';
 $strServerStatus = 'Informazioni di Runtime';
 $strServerStatusUptime = 'Questo server MySQL sta girando da %s. E\' stato avviato il %s.';
 $strServerTabVariables = 'Variabili';
-$strServerTrafficNotes = '<b>Traffico del server</b>: Queste tabelle mostrano le statistiche del traffico di retedi questo server MySQL dal momento del suo avvio.';
+$strServerTrafficNotes = '<b>Traffico del server</b>: Queste tabelle mostrano le statistiche del traffico di rete di questo server MySQL dal momento del suo avvio.';
 $strServerVars = 'Variabili e parametri del Server';
 $strServerVersion = 'Versione MySQL';
 $strSessionStartupErrorGeneral = 'Non posso far partire la sessione senza errori, controlla gli errori nel log di PHP e/o del tuo server web e configura correttamente la tua installazione di PHP.';
@@ -777,6 +787,7 @@ $strShowingBookmark = 'Mostrando i segnalibri';
 $strShowingPhp = 'Mostrando il codice PHP';
 $strShowingRecords = 'Visualizzazione record ';
 $strShowingSQL = 'Mostrando la query SQL';
+$strShowKeys = 'Mostra solo le chiavi';
 $strShow = 'Mostra';
 $strShowOpenTables = 'Mostra le tabelle aperte';
 $strShowPHPInfo = 'Mostra le info sul PHP';
@@ -939,6 +950,10 @@ $strSuccess = 'La query è stata eseguita con successo';
 $strSuhosin = 'Sul server è in esecuzione Suhosin. Controlla la documentazione: %sdocumentation%s per possibili problemi.';
 $strSum = 'Totali';
 $strSwedish = 'Svedese';
+$strSwekeyAuthenticating = 'Autenticazione...';
+$strSwekeyAuthFailed = 'Autentificazione hardware fallita';
+$strSwekeyNoKeyId = 'Il file %s non contiente nessuna chiave id';
+$strSwekeyNoKey = 'Nessuna chiave di autentificazione valida inserita';
 $strSwitchToDatabase = 'Passare al Database copiato';
 $strSwitchToTable = 'Passa alla tabella copiata';
 
@@ -1051,7 +1066,9 @@ $strViewDumpDB = 'Visualizza dump (schema) del database';
 $strViewDump = 'Visualizza dump (schema) della tabella';
 $strViewHasAtLeast = 'Questa visuale ha, come minimo, questo numero di righe. Per informazioni controlla la %sdocumentazione%s.';
 $strViewHasBeenDropped = 'La vista %s è stata eliminata';
+$strViewImage = 'Visualizza immagine';
 $strViewName = 'Nome VISTA';
+$strViewVideo = 'Visualizza video';
 $strView = 'Vista';
 
 $strWebServerUploadDirectory = 'directory di upload del web-server';
@@ -1073,27 +1090,12 @@ $strYes = 'Sì';
 $strZeroRemovesTheLimit = 'N.B.: 0 (zero) significa nessun limite.';
 $strZip = '"compresso con zip"';
 
+// To translate:
 
-$strSwekeyAuthenticating = 'Authenticating...'; //to translate
-$strSwekeyAuthFailed = 'Hardware authentication failed'; //to translate
-$strSwekeyNoKeyId = 'File %s does not contain any key id'; //to translate
-$strSwekeyNoKey = 'No valid authentication key plugged'; //to translate
 $strBLOBRepository = 'BLOB Repository';  //to translate
-$strBLOBRepositoryDamaged = 'Damaged';  //to translate
 $strBLOBRepositoryDisableAreYouSure = 'Are you sure you want to disable all BLOB references for database %s?';  //to translate
-$strBLOBRepositoryDisabled = 'Disabled';  //to translate
-$strBLOBRepositoryDisable = 'Disable';  //to translate
 $strBLOBRepositoryDisableStrongWarning = 'You are about to DISABLE a BLOB Repository!';  //to translate
-$strBLOBRepositoryEnabled = 'Enabled';  //to translate
-$strBLOBRepositoryEnable = 'Enable';  //to translate
 $strBLOBRepositoryRemove = 'Remove BLOB Repository Reference';  //to translate
-$strBLOBRepositoryRepair = 'Repair';  //to translate
-$strBLOBRepositoryStatus = 'Status';  //to translate
 $strBLOBRepositoryUpload = 'Upload to BLOB repository';  //to translate
-$strViewImage = 'View image';  //to translate
-$strPlayAudio = 'Play audio';  //to translate
-$strViewVideo = 'View video';  //to translate
-$strDownloadFile = 'Download file';  //to translate
-$strLogServerHelp = 'You can enter hostname/IP address and port separated by space.';  //to translate
-$strShowKeys = 'Only show keys';  //to translate
+
 ?>
