@@ -30,6 +30,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 + rfe #823652 [structure] ENUM values: field size too small 
 
 3.0.2.0 (not yet released)
+- [lang] Italian update, thanks to Luca and fantu
 
 3.0.1.0 (2008-10-22)
 - bug #2134126 [GUI] SQL error after sorting a subset 
